// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text rendering return value should be able to render a forwardedRef component or SFC 1`] = `<div />`;

exports[`Text rendering return value should be able to render as a class Component 1`] = `
<code
  className="rmd-typography rmd-typography--headline-3"
>
  Hello, world!
</code>
`;

exports[`Text rendering return value should be able to render as an SFC 1`] = `
<div
  className="rmd-typography rmd-typography--headline-3 false"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as a <p> with the body-1 styles by default 1`] = `
<p
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided component prop when it's simple strings 1`] = `
<h1
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</h1>
`;

exports[`Text rendering return value should render as the provided component prop when it's simple strings 2`] = `
<h2
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</h2>
`;

exports[`Text rendering return value should render as the provided component prop when it's simple strings 3`] = `
<h3
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</h3>
`;

exports[`Text rendering return value should render as the provided component prop when it's simple strings 4`] = `
<h4
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</h4>
`;

exports[`Text rendering return value should render as the provided component prop when it's simple strings 5`] = `
<h5
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</h5>
`;

exports[`Text rendering return value should render as the provided component prop when it's simple strings 6`] = `
<h6
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</h6>
`;

exports[`Text rendering return value should render as the provided component prop when it's simple strings 7`] = `
<p
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</p>
`;

exports[`Text rendering return value should render as the provided component prop when it's simple strings 8`] = `
<span
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</span>
`;

exports[`Text rendering return value should render as the provided component prop when it's simple strings 9`] = `
<div
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</div>
`;

exports[`Text rendering return value should render as the provided component prop when it's simple strings 10`] = `
<button
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</button>
`;

exports[`Text rendering return value should render as the provided component prop when it's simple strings 11`] = `
<caption
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</caption>
`;

exports[`Text should provide the className if the children is a callback function 1`] = `
<div
  className="rmd-typography rmd-typography--body-1"
>
  Hello, world!
</div>
`;
